focus on header attempting reoganize and clean up sizing / wrap issues

--- a/src/app.css
+++ b/src/app.css
@@ -13,15 +13,36 @@
     min-width: 100vw;
 }
 
+
+
+
+
 /* The HEADER block of the HTML */
 header {
     flex: 0 80px;
     padding: 10px 20px;
     background-color: #177339;
 }
-header h1 {
+
+header div.header_box {
+    display: flex;
+    background-color: lightblue;
+}
+
+header div h1.FGC {
     font-size: larger;
-    text-shadow: 1px 1px 1px rgb(140, 140, 140)
+    text-shadow: 1px 1px 1px rgb(140, 140, 140);
+    background-color: beige;
+
+    margin: auto;
+    display: inline;
+}
+
+img.FGC_ico {
+    width: 10%;
+    height: auto;
+    margin-right: 5px;
+    display: inline;
 }
 
 /* Link details for Navlinks */
@@ -30,7 +51,7 @@ header h1 {
     list-style: none;
     gap: 25px;
 
-    background-color: yellow;
+    background-color: rgb(0, 85, 255);
 }
 .navlinks li a {
     color: whitesmoke;
@@ -47,6 +68,11 @@ header h1 {
 
     transform: scale(1.3);
 }
+
+
+
+
+
 
 /* The MAIN block of the HTML */
 main {
